span in header to petit formal script and lowercase

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   min-height: 100vh;
   display: flex;
@@ -16,5 +10,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
 
+.App-header span {
+  font-family: 'Petit Formal Script', cursive;
+  text-transform: lowercase;
 }
