add span color to slate blue and header color to navy

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #0F0066;
 }
 
 .App-header span {
   font-family: 'Petit Formal Script', cursive;
   text-transform: lowercase;
+  color: #8670FF;
 }
