2 em font size on span in App.css

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 .App-header span {
   font-family: 'Petit Formal Script', cursive;
+  font-size: 5rem;
   text-transform: lowercase;
   color: #8670FF;
 }
