add negative top margin on span of heaer

--- a/src/App.css
+++ b/src/App.css
@@ -19,4 +19,6 @@
   font-size: 5rem;
   text-transform: lowercase;
   color: #8670FF;
+  /* background-color: papayawhip; */
+  margin-top: -15px;
 }
