--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   font-family: 'Oswald', sans-serif;
+  font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
