--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,9 @@ button {
   margin-top: 30px;
   width: 40%;
 }
+
+.wrapper-footer {
+  margin-top: 60px;
+  font-size: .9rem;
+  color: #0F0066
+}
