bottom margin added to .input

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .wrapper-survey {
@@ -43,7 +42,10 @@
   border-radius: 2px;
   padding: 5px;
   border: 1px solid gray;
+}
 
+.input {
+  margin-bottom: 15px;
 }
 
 .buttonWrapper {
